--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    font-family: Roboto,
+    Helvetica Neue Light,
+    Helvetica Neue,
+    Helvetica,
+    Arial,
+    Lucida Grande,
+    sans-serif;
+    margin: 0;
+}
+.c{
+    text-align: center;
+}
+.co-card{
+    padding: 1rem;
+    border-radius: .5rem;
+    background-color: #171717;
+}
+.super-title{
+    font-size: 2rem;
+    font-weight: lighter;
+    width: 100%;
+    text-align: right;
+    padding: 4rem;
+}
+.f-c{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.filter-white{
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(127deg) brightness(109%) contrast(102%);
+}
+
+.p-datatable .p-sortable-column.p-highlight:hover,
+.p-datatable .p-sortable-column:focus,
+.p-datatable .p-sortable-column:not(.p-highlight):hover {
+    background: rgba(255, 255, 255, 0.7) !important;
+}
