--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,5 +1,6 @@
 div{
     border-radius: .5rem;
-    border: 1px solid #e5e5e5;
     padding: 1rem;
+    background-color: #111;
+    color: #EEE;
 }
