--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,7 @@
 .p-scrollpanel .p-scrollpanel-bar{
     background-color: rgba(255, 255, 255, 0.12) !important;
 }
+.p-datatable{
+    overflow: hidden;
+    border-radius: .5rem;
+}
