--- a/src/app/pages/loadstudents/loadstudents.component.html
+++ b/src/app/pages/loadstudents/loadstudents.component.html
@@ -1,5 +1,5 @@
-
-<co-recoverdatalayout [extend]="dataExcel.length > 0" label="PASO 2 DE 3">
+<p-toast></p-toast>
+<co-recoverdatalayout [extend]="dataExcel.length > 0" label="PASO 2 DE 4">
     <section class="action-table" view>
         <p-scrollPanel [style]="{height: '100%'}" >
             <div class="py-3 pl-3">
@@ -92,10 +92,12 @@
             <input type="file" accept=".xlsx,.xls" style="display: none;" (change)="readExcel($event)">
         </label>
         <div style="display: flex; justify-content: center;">
-            <p-button [style]="{background: 'var(--green-600)'}" styleClass="mt-3" routerLink="/">Paso 1</p-button>
-            <co-box></co-box>
-            <p-button [style]="{background: 'var(--green-600)'}" styleClass="mt-3" routerLink="/step3">Paso 3</p-button>
+            <p-button styleClass="mt-3 p-button-secondary" routerLink="/">Retroceder</p-button>
+            <p-button styleClass="mt-3 p-button-secondary ml-2" (onClick)="nextStep()" *ngIf="computeTableStudent().length">Siguiente</p-button>
         </div>
         
     </div>
 </co-recoverdatalayout>
+<co-layout-bottom [wrapper]="false" *ngIf="computeTableStudent().length">
+    <p-button styleClass="p-button-secondary" label="Salvar datos" (onClick)="saveData()"></p-button>
+</co-layout-bottom>
