--- a/src/app/components/recoverdatalayout/recoverdatalayout.component.html
+++ b/src/app/components/recoverdatalayout/recoverdatalayout.component.html
@@ -8,8 +8,8 @@
         </co-card>
     </div>
     
-    <p-scrollPanel [style]="{width: '100%', height: '100%'}" class="view" *ngIf="extend">
+    <div class="view" *ngIf="extend" style="width: 100%; height: 100%; overflow-y: auto;"> 
         <ng-content select="[view]"></ng-content>
-    </p-scrollPanel>
+    </div>
 </section>
 
