--- a/src/app/pages/step3/step3.component.html
+++ b/src/app/pages/step3/step3.component.html
@@ -1,6 +1,6 @@
 <co-recoverdatalayout label="Paso 3 de 4" [extend]="dataRelation.length > 0">
     <div view style="height: 100%; display: grid; grid-template-columns: 1fr 400px; grid-template-rows: 100%;">
-        <p-scrollPanel [style]="{height: '100%'}">
+        <div style="overflow-y: auto; height: 100%;">
             <div class="p-3" style="display: flex; justify-content: center;flex-direction: column; align-items: center;">
                 <co-card styleClass="mb-2">
                     <div style="width: 800px;">
@@ -29,7 +29,7 @@
                 </co-card>
 
             </div>
-        </p-scrollPanel>
+        </div>
         <div class="p-3">
             <div style="display: grid; gap: .5rem;">
                 <co-card *ngIf="dataLost.length">
