--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,22 @@
     margin: 0;
     outline: none;
 }
+
+
+/* Scroll 2 */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0);
+    border-radius: 10px;
+  }
+::-webkit-scrollbar-thumb {
+    background-color: #11171a;
+    border-radius: 10px;
+  }
+  
 .c{
     text-align: center;
 }
