change color dark

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,8 +1,8 @@
 :host{
     border-radius: .5rem;
     padding: 1rem;
-    background-color: #111;
-    color: #EEE;
+    background-color: #fff;
     box-sizing: border-box;
     display: block;
+    
 }
