--- a/src/app/components/recoverdatalayout/recoverdatalayout.component.html
+++ b/src/app/components/recoverdatalayout/recoverdatalayout.component.html
@@ -1,6 +1,6 @@
 <section [class]="extend?'extend':null">
     <div [class]="extend ? 'py-3 pl-3': null" style="height: 100%;">
-       <co-card class="action">
+       <co-card class="action shadow-4">
             <div class="super-title">{{label}}</div>
             <div class="action-content">
                 <ng-content select="[action]"></ng-content>
