--- a/src/app/pages/report/report.component.scss
+++ b/src/app/pages/report/report.component.scss
@@ -1,4 +1,27 @@
 .link{
-    background: #222;
     border-radius: .5rem;
+    cursor: pointer;
+    min-height: 80px;
+    background-color: var(--primary-color);
+    color: white;
+}
+#general-view{
+    padding: 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+#careerListContainer{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    grid-gap: 1rem;
+}
+.careerItemInfo{
+    font-size: .9rem;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: .5rem;
+    align-items: center;
+    text-align: center;
 }
