--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,12 +5,15 @@
     Helvetica Neue,
     Helvetica,
     Arial,
-    Lucida Grande,
     sans-serif;
     margin: 0;
     outline: none;
 }
-
+body{
+    font-size: .9rem;
+    color: #1c262b;
+    background-color: #f8f8f8;
+}
 
 /* Scroll 2 */
 ::-webkit-scrollbar {
@@ -35,7 +38,7 @@
 .co-card{
     padding: 1rem;
     border-radius: .5rem;
-    background-color: #171717;
+    background-color: #fff;
 }
 .super-title{
     font-size: 2rem;
@@ -50,7 +53,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-}
+}/*
 .filter-white{
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(127deg) brightness(109%) contrast(102%);
 }
@@ -61,13 +64,10 @@
     background: rgba(255, 255, 255, 0.7) !important;
 }
 
-.p-scrollpanel-content{
-        /*padding: 0 0 18px 0 !important;*/
-}
 .p-scrollpanel .p-scrollpanel-bar{
     background-color: rgba(255, 255, 255, 0.12) !important;
 }
 .p-datatable{
     overflow: hidden;
     border-radius: .5rem;
-}
+}*/
