--- a/src/app/components/recoverdatalayout/recoverdatalayout.component.scss
+++ b/src/app/components/recoverdatalayout/recoverdatalayout.component.scss
@@ -6,7 +6,7 @@ section{
     grid-template-rows: 100%;
 }
 ::ng-deep .action{
-    display: grid;
+    display: grid !important;
     grid-template-columns: 100%;
     grid-template-rows: auto 1fr;
     height: 100%;
