--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -1,70 +1,83 @@
 <co-recoverdatalayout [extend]="true" label="Reporte">
-    <div action style="display: grid; gap: .5rem;">
-        <div class="p-4 elevation-10 link">
-            <div class="mb-2">Volver a cargar Archivo de alternativas</div>
-            <div class="text-right">
-                <p-button styleClass="p-button-sm" routerLink="/">Ir paso 1</p-button>
-            </div>
-        </div>
-        <div class="p-4 elevation-10 link">
-            <div class="mb-2">Volver a cargar Excel de información de los alumnos</div>
-            <div class="text-right">
-                <p-button styleClass="p-button-sm" routerLink="/loadstudents">Ir paso 2</p-button>
-            </div>
-        </div>
-        <div class="p-4 elevation-10 link">
-            <div class="mb-2">Volver a cargar Archivo con la relacion de código de barras y de estudiante</div>
-            <div class="text-right">
-                <p-button styleClass="p-button-sm" routerLink="/step3">Ir paso 3</p-button>
-            </div>
-        </div>
-        <div class="p-4 elevation-10 link">
-            <div class="mb-2">Volver a cargar Archivo de respuestas</div>
-            <div class="text-right">
-                <p-button styleClass="p-button-sm" routerLink="/step4">Ir paso 4</p-button>
-            </div>
-        </div>
+    <div action style="display: grid; gap: .5rem; grid-template-columns: repeat(2, 1fr);">
+        <div [style]="{background: '#'+color}" class="p-3 shadow-1 link f-c" routerLink="/">Cargar Claves</div>
+        <div class="p-3 shadow-1 link f-c" routerLink="/loadstudents">Cargar Alumnos</div>
+        <div class="p-3 shadow-1 link f-c" routerLink="/step3">Cargar Asistencia</div>
+        <div class="p-3 shadow-1 link f-c" routerLink="/step4">Cargar Respuestas</div>
     </div>
-    <div view class="p-4">
-        <div class="mb-4">
-            <p-dropdown
-                [options]="careerInfoList"
-                optionLabel="careerName"
-                [(ngModel)]="careerSelected"
-                placeholder="Seleccione una carrera"
-                (onChange)="selectChange()"
-                [style]="{width: '400px'}"
-            >
-            </p-dropdown>
-            <p-button>HOLA</p-button>
+    <div view style="height: 100%; width: 100%; overflow-y: auto;">
+        <div class="p-4" *ngIf="careerSelected != null">
+            <div class="mb-4" style="display: flex; align-items: center; justify-content: space-between; gap: 1rem;">
+                <div style="display: flex; align-items: center; gap: 1rem;">
+                    <p-dropdown [options]="careerInfoList" optionLabel="careerName" [(ngModel)]="careerSelected"
+                        placeholder="Seleccione una carrera" (onChange)="selectChange()" [style]="{width: '400px'}">
+                    </p-dropdown>
+                    <p-button *ngIf="studentDataList.length" (onClick)="generateExcelFile()"
+                        [style]="{background: 'var(--cyan-600)'}">
+                        Exportar selección a Excel</p-button>
+
+                </div>
+                <button pButton type="button" icon="pi pi-times" class="p-button-text p-button-rounded" (click)="careerSelected = null"></button>
+            </div>
+            <p-table [value]="studentDataList" [rows]="10" [showCurrentPageReport]="true">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <!--<th pSortableColumn="career">Carrera<p-sortIcon field="career"></p-sortIcon></th>-->
+                        <th pSortableColumn="code">Código<p-sortIcon field="career"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="fullname">Nombres<p-sortIcon field="career"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="group">Grupo<p-sortIcon field="career"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="modality">Modalidad<p-sortIcon field="career"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="score">Puntaje<p-sortIcon field="career"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="calification">Calificación<p-sortIcon field="career"></p-sortIcon>
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-student>
+                    <tr>
+                        <!--<td>{{student.career}}</td>-->
+                        <td>{{student.code}}</td>
+                        <td>{{student.fullname}}</td>
+                        <td>{{student.group}}</td>
+                        <td>{{student.modality}}</td>
+                        <td>{{student.score}}</td>
+                        <td>{{student.calification}}</td>
+                    </tr>
+                </ng-template>
+            </p-table>
         </div>
-        <p-table
-            [value]="studentDataList"
-            [rows]="10"
-            [showCurrentPageReport]="true"
-        >
-            <ng-template pTemplate="header">
-                <tr>
-                    <th pSortableColumn="career">Carrera<p-sortIcon field="career"></p-sortIcon></th>
-                    <th pSortableColumn="code">Código<p-sortIcon field="career"></p-sortIcon></th>
-                    <th pSortableColumn="fullname">Nombres<p-sortIcon field="career"></p-sortIcon></th>
-                    <th pSortableColumn="group">Grupo<p-sortIcon field="career"></p-sortIcon></th>
-                    <th pSortableColumn="modality">Modalidad<p-sortIcon field="career"></p-sortIcon></th>
-                    <th pSortableColumn="score">Puntaje<p-sortIcon field="career"></p-sortIcon></th>
-                    <th pSortableColumn="calification">Calificación<p-sortIcon field="career"></p-sortIcon></th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-student>
-                <tr>
-                    <td>{{student.career}}</td>
-                    <td>{{student.code}}</td>
-                    <td>{{student.fullname}}</td>
-                    <td>{{student.group}}</td>
-                    <td>{{student.modality}}</td>
-                    <td>{{student.score}}</td>
-                    <td>{{student.calification}}</td>
-                </tr>
-            </ng-template>
-        </p-table>
+        <div *ngIf="careerSelected == null" id="general-view" class="mt-6">
+            <div style="display: flex; gap: .5rem; align-items: center; justify-content: space-between;" class="mb-4">
+                <h2>Resultados por carrera</h2>
+                <button (click)="generateExcelFileAll()" pButton class="p-button-sm">Exportar a Excel</button>
+            </div>
+            <div id="careerListContainer">
+                <div class="careerItemInfo shadow-1 co-card p-5" *ngFor="let item of careerInfoList">
+                    <div>
+                        <div>{{item.careerName}}</div>
+                        <div class="mt-3">{{item.totalStundets}} Estudiantes</div>
+                    </div>
+                    <div style="display: flex; gap: .5rem;">
+                        <button pButton type="button" icon="pi pi-list" class="p-button-rounded p-button-outlined p-button-info" (click)="selectCareer(item)"></button>
+                        <button pButton type="button" icon="pi pi-file-excel" class="p-button-rounded p-button-outlined p-button-success" (click)="prepareExcelPerCareer(item)"></button>
+
+                    </div>
+                </div>
+            </div>
+            <div class="my-4">
+                <h2>Graficos</h2>
+            </div>
+            <co-card class="shadow-1">
+                <div style="display: grid; grid-template-columns: 2fr 1fr;">
+                    <p-chart type="bar" [data]="data" [options]="options"></p-chart>
+                    <p-chart type="doughnut" [data]="data" ></p-chart>
+                </div>
+                
+            </co-card>
+        </div>
     </div>
 </co-recoverdatalayout>
