--- a/src/app/components/recoverdatalayout/recoverdatalayout.component.html
+++ b/src/app/components/recoverdatalayout/recoverdatalayout.component.html
@@ -1,11 +1,11 @@
 <section [class]="extend?'extend':null">
-    <div [class]="extend ? 'py-3 pl-3': null" style="height: 100%;">
-       <co-card class="action shadow-4">
+    <div [class]="extend ? '': null" style="height: 100%;">
+       <div class="action shadow-4">
             <div class="super-title">{{label}}</div>
             <div class="action-content">
                 <ng-content select="[action]"></ng-content>
             </div>
-        </co-card>
+        </div>
     </div>
     
     <div class="view" *ngIf="extend" style="width: 100%; height: 100%; overflow-y: auto;"> 
