--- a/src/app/components/recoverdatalayout/recoverdatalayout.component.scss
+++ b/src/app/components/recoverdatalayout/recoverdatalayout.component.scss
@@ -5,15 +5,25 @@ section{
     grid-template-columns: 100%;
     grid-template-rows: 100%;
 }
-::ng-deep .action{
+.action{
     display: grid !important;
     grid-template-columns: 100%;
     grid-template-rows: auto 1fr;
     height: 100%;
+    background-color: #7d48d9;
+    color: white;
 }
 section.extend{
-    grid-template-columns: 400px auto;
+    grid-template-columns: 300px auto;
 }
 .action-content{
     padding: 1rem;
+}
+
+.super-title{
+    font-size: 1.5rem;
+    font-weight: lighter;
+    width: 100%;
+    text-align: right;
+    padding: 2rem;
 }
