--- a/src/app/pages/loadstudents/loadstudents.component.html
+++ b/src/app/pages/loadstudents/loadstudents.component.html
@@ -2,32 +2,34 @@
 <co-recoverdatalayout [extend]="dataExcel.length > 0" label="PASO 2 DE 4">
     <section class="action-table" view>
         <div [style]="{height: '100%'}" style="overflow-y: auto;">
-            <div class="py-3 pl-3">
-                <p-table 
-                [paginator]="true" [rows]="30" styleClass="p-datatable-sm" responsiveLayout="scroll" [value]="computeTableStudent()"
-                [showCurrentPageReport]="true"
-                currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} estudiantes"
-                >
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th *ngFor="let item of dataHeaders | keyvalue" [pSortableColumn]="item.key + ''">
-                                {{item.value}}
-                                <p-sortIcon [field]="item.key + ''"></p-sortIcon>
-                            </th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-student>
-                        <tr>
-                            <td>{{student.career}}</td>
-                            <td>{{student.careerName}}</td>
-                            <td>{{student.code}}</td>
-                            <td>{{student.dni}}</td>
-                            <td>{{student.fullname}}</td>
-                            <td>{{student.group}}</td>
-                            <td>{{student.modality}}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
+            <div class="p-4">
+                <co-card>
+                    <p-table 
+                    [paginator]="true" [rows]="30" styleClass="p-datatable-sm" responsiveLayout="scroll" [value]="computeTableStudent()"
+                    [showCurrentPageReport]="true"
+                    currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} estudiantes"
+                    >
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th *ngFor="let item of dataHeaders | keyvalue" [pSortableColumn]="item.key + ''">
+                                    {{item.value}}
+                                    <p-sortIcon [field]="item.key + ''"></p-sortIcon>
+                                </th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-student>
+                            <tr>
+                                <td>{{student.career}}</td>
+                                <td>{{student.careerName}}</td>
+                                <td>{{student.code}}</td>
+                                <td>{{student.dni}}</td>
+                                <td>{{student.fullname}}</td>
+                                <td>{{student.group}}</td>
+                                <td>{{student.modality}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </co-card>
             </div>
         </div>
         
@@ -88,12 +90,12 @@
         <co-box size="2rem"></co-box>
         <h3>Seleccione su archivo Excel con los datos de alumnos</h3>
         <co-box></co-box>
-        <label pButton>Cargar Excel Alumnos
+        <label pButton class="p-button-raised">Cargar Excel Alumnos
             <input type="file" accept=".xlsx,.xls" style="display: none;" (change)="readExcel($event)">
         </label>
         <div style="display: flex; justify-content: center;">
-            <p-button styleClass="mt-3 p-button-secondary" routerLink="/">Retroceder</p-button>
-            <p-button styleClass="mt-3 p-button-secondary ml-2" (onClick)="nextStep()" *ngIf="computeTableStudent().length">Siguiente</p-button>
+            <p-button styleClass="mt-3 p-button-secondary p-button-raised" routerLink="/">Retroceder</p-button>
+            <p-button styleClass="mt-3 p-button-secondary p-button-raised ml-2" (onClick)="nextStep()" *ngIf="computeTableStudent().length">Siguiente</p-button>
         </div>
         
     </div>
