--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -1,6 +1,6 @@
 <co-recoverdatalayout [extend]="true" label="Reporte">
     <div action style="display: grid; gap: .5rem; grid-template-columns: repeat(2, 1fr);">
-        <div [style]="{background: '#'+color}" class="p-3 shadow-1 link f-c" routerLink="/">Cargar Claves</div>
+        <div class="p-3 shadow-1 link f-c" routerLink="/">Cargar Claves</div>
         <div class="p-3 shadow-1 link f-c" routerLink="/loadstudents">Cargar Alumnos</div>
         <div class="p-3 shadow-1 link f-c" routerLink="/step3">Cargar Asistencia</div>
         <div class="p-3 shadow-1 link f-c" routerLink="/step4">Cargar Respuestas</div>
@@ -17,7 +17,8 @@
                         Exportar selección a Excel</p-button>
 
                 </div>
-                <button pButton type="button" icon="pi pi-times" class="p-button-text p-button-rounded" (click)="careerSelected = null"></button>
+                <button pButton type="button" icon="pi pi-times" class="p-button-text p-button-rounded"
+                    (click)="careerSelected = null"></button>
             </div>
             <p-table [value]="studentDataList" [rows]="10" [showCurrentPageReport]="true">
                 <ng-template pTemplate="header">
@@ -62,22 +63,27 @@
                         <div class="mt-3">{{item.totalStundets}} Estudiantes</div>
                     </div>
                     <div style="display: flex; gap: .5rem;">
-                        <button pButton type="button" icon="pi pi-list" class="p-button-rounded p-button-outlined p-button-info" (click)="selectCareer(item)"></button>
-                        <button pButton type="button" icon="pi pi-file-excel" class="p-button-rounded p-button-outlined p-button-success" (click)="prepareExcelPerCareer(item)"></button>
+                        <button pButton type="button" icon="pi pi-list"
+                            class="p-button-rounded p-button-outlined p-button-info"
+                            (click)="selectCareer(item)"></button>
+                        <button pButton type="button" icon="pi pi-file-excel"
+                            class="p-button-rounded p-button-outlined p-button-success"
+                            (click)="prepareExcelPerCareer(item)"></button>
 
                     </div>
                 </div>
             </div>
-            <div class="my-4">
-                <h2>Graficos</h2>
-            </div>
-            <co-card class="shadow-1">
-                <div style="display: grid; grid-template-columns: 2fr 1fr;">
-                    <p-chart type="bar" [data]="data" [options]="options"></p-chart>
-                    <p-chart type="doughnut" [data]="data" ></p-chart>
+            <co-card class="shadow-1 mt-4">
+                <div class="mb-4">
+                    <h3>Total postulantes por carrera</h3>
                 </div>
-                
+                <div style="display: grid; grid-template-columns: 2fr 1fr;">
+                    <p-chart type="bar" [data]="data"></p-chart>
+                    <p-chart type="doughnut" [data]="data"></p-chart>
+                </div>
+
             </co-card>
+            <co-modality-list class="mt-4"></co-modality-list>
         </div>
     </div>
 </co-recoverdatalayout>
