--- a/src/app/pages/step3/step3.component.html
+++ b/src/app/pages/step3/step3.component.html
@@ -2,11 +2,20 @@
     <div view style="height: 100%; display: grid; grid-template-columns: 1fr 400px; grid-template-rows: 100%;">
         <div style="overflow-y: auto; height: 100%;">
             <div class="p-4">
-                <co-card styleClass="mb-2">
-                        <span>ASISTENCIA: {{dataRelation.length - 1}} de {{computeRelationKeys().length}}</span>
+                <co-card class="shadow-1">
+                    <span>ASISTENCIA: {{dataRelation.length - 1}} de {{computeRelationKeys().length}}</span>
                 </co-card>
-                <co-box></co-box>
-                <co-card>
+                <co-card class="my-4" style="background-color: #263238;">
+                    <h3 class="mb-4" style="color: white;">Contenido del archivo</h3>
+                    <ngx-codemirror [(ngModel)]="file" [options]="{
+                        lineNumbers: true,
+                        theme: 'material',
+                        mode: 'javascript',
+                        readOnly: true
+                        }">
+                    </ngx-codemirror>
+                </co-card>
+                <co-card class="shadow-1">
                     <p-table [value]="computeRelationKeys()">
                         <ng-template pTemplate="header">
                             <tr>
@@ -22,7 +31,7 @@
                                 <td class="c">{{student.idBar == null? 'FALTA': student.idBar}}</td>
                             </tr>
                         </ng-template>
-                    
+
                     </p-table>
                 </co-card>
 
@@ -30,63 +39,72 @@
         </div>
         <div class="p-3">
             <div style="display: grid; gap: .5rem;">
-                <co-card *ngIf="dataLost.length">
-                    <h4 class="text-center mb-3">Codigos perdidos</h4>
+                <co-card *ngIf="dataLost.length" class="shadow-1">
+                    <div class="mb-4">
+                        <h3>Codigos perdidos</h3>
+                        Los siguientes codigos en cartillas no corresponden a ningun estudiante registrado.
+                    </div>
                     <table style="width: 100%;">
                         <thead>
                             <tr>
-                                <th>CODIGO</th>
-                                <th>ID BARRA</th>
+                                <th class="text-left">CODIGO</th>
+                                <th class="text-left">ID BARRA</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let item of dataLost">
-                                <td class="text-center">{{item.code}}</td>
-                                <td class="text-center">{{item.idBar}}</td>
+                                <td>{{item.code}}</td>
+                                <td>{{item.idBar}}</td>
                             </tr>
                         </tbody>
                     </table>
                 </co-card>
-                <co-card *ngIf="inasistenceList.length">
-                    <h4 class="text-center mb-3">
-                        Alumnos faltantes
-                    </h4>
+                <co-card *ngIf="inasistenceList.length" class="shadow-1">
+                    <div class="mb-4">
+                        <h3>Alumnos faltantes</h3>
+                        Los siguientes alumnos no se encuentran en las cartillas escaneadas.
+                    </div>
                     <table style="width: 100%;">
                         <tr>
                             <th>#</th>
                             <th class="text-left">CODIGO</th>
                             <th class="text-left">NOMBRES</th>
+                            <th class="text-left"></th>
+
                         </tr>
                         <tr *ngFor="let item of inasistenceList; let i = index">
                             <td>{{i + 1}}</td>
                             <td>{{item.code}}</td>
                             <td class="text-xs">{{item.fullname}}</td>
+                            <td class="text-xs">{{item.career}}</td>
+
                         </tr>
                     </table>
                 </co-card>
             </div>
-            
+
         </div>
-        
+
     </div>
-    
+
     <div action class="f-c" style="height: 100%;">
         <img src="/assets/txt-file.svg" class="filter-white" style="height: 6rem;">
         <co-box size="2rem"></co-box>
         <h3>Seleccione el archivo que contenga la información del codigo de barras y de estudiantes</h3>
         <co-box></co-box>
-        <label pButton>Codigo de barras y alumno
-            <input type="file" style="display: none;" (change)="loadRelationsKeys($event)" >
+        <label pButton class="p-button-raised">
+            Codigo de barras y alumno
+            <input type="file" style="display: none;" (change)="loadRelationsKeys($event)">
         </label>
 
         <div class="mt-3">
-            <p-button  styleClass="p-button-secondary" routerLink="/loadstudents">Retroceder</p-button>
-            <p-button  styleClass="ml-2 p-button-secondary" (onClick)="nextStep()">Siguiente</p-button>
+            <p-button styleClass="p-button-secondary p-button-raised" routerLink="/loadstudents">Retroceder</p-button>
+            <p-button styleClass="ml-2 p-button-secondary p-button-raised" (onClick)="nextStep()">Siguiente</p-button>
         </div>
-        
+
     </div>
 </co-recoverdatalayout>
 <p-toast></p-toast>
 <co-layout-bottom *ngIf="dataRelation.length > 0" [wrapper]="false">
-    <p-button  styleClass="p-button-secondary" (onClick)="saveData()">Salvar datos</p-button>
+    <p-button styleClass="p-button-secondary" (onClick)="saveData()">Salvar datos</p-button>
 </co-layout-bottom>
