--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,8 @@
+@import '~codemirror/lib/codemirror';
+@import '~codemirror/theme/material';
 /* You can add global styles to this file, and also import other style files */
 *{
-    font-family: Roboto,
-    Helvetica Neue Light,
-    Helvetica Neue,
-    Helvetica,
-    Arial,
-    sans-serif;
+    
     margin: 0;
     outline: none;
 }
@@ -13,6 +10,12 @@ body{
     font-size: .9rem;
     color: #1c262b;
     background-color: #f8f8f8;
+    font-family: Roboto,
+    Helvetica Neue Light,
+    Helvetica Neue,
+    Helvetica,
+    Arial,
+    sans-serif;
 }
 
 /* Scroll 2 */
@@ -40,24 +43,17 @@ body{
     border-radius: .5rem;
     background-color: #fff;
 }
-.super-title{
-    font-size: 2rem;
-    font-weight: lighter;
-    width: 100%;
-    text-align: right;
-    padding: 4rem;
-}
 .f-c{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-}/*
+}
 .filter-white{
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(127deg) brightness(109%) contrast(102%);
 }
-
+/*
 .p-datatable .p-sortable-column.p-highlight:hover,
 .p-datatable .p-sortable-column:focus,
 .p-datatable .p-sortable-column:not(.p-highlight):hover {
